views: increase TreeView editor padding sometimes

Harmony Textfields have focus rings, which are 2pt wide and
draw outside the Textfield's normal bounds. Since TreeView
leaves only 2pt of padding between the Textfield's bounds
and the icon on a row, the focus ring can overdraw the icon.
To fix that, when focus rings are present, leave a bit of
extra space. This doesn't look too bad when not editing
since Harmony has more padding across the board, and when
editing the focus ring no longer overdraws the icon.

Bug: 788128
Change-Id: I4b0752fdec652d6ef3a6f47756ac21d777fa6468
Reviewed-on: https://chromium-review.googlesource.com/850915
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527059}
Former-commit-id: a1a251f4dd04319e9c541d4a5a45a940b337515e